<resources>
    <string name="app_name">inote</string>
    <string name="a_m">a.m.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="ad_show">Full screen AD will appear</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="add_more_features">+ Add more features</string>
    <string name="add_new_checklist_items">Add new checklist items</string>
    <string name="add_new_checklist_items_top">New checklist at the top</string>
    <string name="add_new_sound">Add a new sound</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="add_option_to_draw_note">+Add option to draw note</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="additional_info">Additional info</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
    <string name="album">Album</string>
    <string name="alignment">Alignment</string>
    <string name="all_notes">All Notes</string>
    <string name="altitude">Altitude</string>
    <string name="always">Always</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="apng_text">Copyright (C) 2019 Zhou Pengfei\n\nLicensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="apng_title">APNG Android (animated WebP support)</string>
    <string name="apng_url">https://github.com/penfeizhou/APNG4Android</string>
    <string name="app_icon_color">App icon color</string>
    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available. Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
    <string name="app_launcher_short">App Launcher</string>
    <string name="app_name2">All Notes</string>
    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets. It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
    <string name="app_version">App version: %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append">Append with \'_1\'</string>
    <string name="append_filenames">Append filenames</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
    <string name="april">April</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="ask_before_delete">Not ask when deleting note</string>
    <string name="at_start">At start</string>
    <string name="audio_only_5">Each note can only save 5 audio files</string>
    <string name="audio_record_view_text">Copyright (C) 2020 Armen Gevorgyan\n\nLicensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="audio_record_view_title">Audio Record View (audio visualization)</string>
    <string name="audio_record_view_url">https://github.com/Armen101/AudioRecordView</string>
    <string name="august">August</string>
    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="auto">Auto</string>
    <string name="auto_save">Auto save</string>
    <string name="autofittextview_text">Copyright 2014 Grantland Chew\n\nLicensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
    <string name="autofittextview_url">https://github.com/grantland/android-autofittextview</string>
    <string name="back">Back</string>
    <string name="background_color">Background color</string>
    <string name="backup_file">Backup file</string>
    <string name="before_asking_question">Before you ask a question, please first read the</string>
    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
    <string name="before_rate_read_faq">Before you rate us, please check the app settings and read the Frequently Asked Questions first. If you have any problems, maybe the solution is there.</string>
    <string name="black_white">Black &amp; White</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy_now">Buy Now</string>
    <string name="byimage">Share by Image</string>
    <string name="bytext">Share by Text</string>
    <string name="calculator_short">Calculator</string>
    <string name="calendar_short">Calendar</string>
    <string name="call_history_tab">Call History</string>
    <string name="camera">Camera</string>
    <string name="camera_short">Camera</string>
    <string name="can_show_emoji">Can show emoji ios if you have it</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel</string>
    <string name="center">Center</string>
    <string name="change_color">Change color</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="change_date_and_time_format">Change date and time format</string>
    <string name="change_filter">Change filter</string>
    <string name="change_folder">Change folder</string>
    <string name="change_pass">Change passcode</string>
    <string name="change_view_type">Change view type</string>
    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_update">Check for update</string>
    <string name="checklist2">Checklist</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="delete_all">Delete all</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="foldersxl">Folders</string>
    <string name="forgot_pass">Forgot passcode?</string>
    <string name="get_data">Load note data...</string>
    <string name="n_30_dayi">Notes are available here for 30 days. After that time, notes will be permanently deleted. This may take up to 40 days</string>
    <string name="no">No</string>
    <string name="no_notes">No Notes</string>
    <string name="passcode_6_numbers">passcode (6 numbers)</string>
    <string name="rcent_deleted">Recently Deleted</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="searchs">Search</string>
    <string name="settingxl">Settings</string>
    <string name="sort_a_to_z">Sort A to Z</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_z_to_a">Sort Z to A</string>
    <string name="this_note_is_locked">This note is locked</string>
    <string name="view_note">View note</string>
    <string name="yes">Yes</string>
</resources>