<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeChooserContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_radius"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSortAZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/sort_a_to_z"
                android:textColor="#000000"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewhome1"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#c6c6c6" />

            <TextView
                android:id="@+id/tvSortZA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/sort_z_to_a"
                android:textColor="#000000"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewhome2"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#c6c6c6" />

            <TextView
                android:id="@+id/tvSortDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/sort_by_time"
                android:textColor="#000000"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewhome3"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#c6c6c6" />

            <TextView
                android:id="@+id/tvGoSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/settingxl"
                android:textColor="#000000"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCancelHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/background_white_radius"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/cancel2"
            android:textColor="#000000"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
