<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff">

    <LinearLayout
        android:id="@+id/dialog_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:background="@drawable/background_white_radius"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/font"
            android:gravity="center_vertical"
            android:text="@string/rename"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_25sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvA_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font"
                android:gravity="center_vertical"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font"
                android:gravity="center_vertical"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
